@@ -115,6 +115,10 @@ drumkv1widget::drumkv1widget ( QWidget *pParent, Qt::WindowFlags wflags )
 
 	m_ui.setupUi(this);
 
+	// Init swapable params A/B to default.
+	for (uint32_t i = 0; i < drumkv1::NUM_PARAMS; ++i)
+		m_params_ab[i] = drumkv1_default_params[i].value;
+
 	// Start clean.
 	m_iUpdate = 0;
 
@@ -437,6 +441,13 @@ drumkv1widget::drumkv1widget ( QWidget *pParent, Qt::WindowFlags wflags )
 		SIGNAL(customContextMenuRequested(const QPoint&)),
 		SLOT(contextMenuRequest(const QPoint&)));
 
+
+	// Swap params A/B
+	QObject::connect(m_ui.SwapParamsButton,
+		SIGNAL(toggled(bool)),
+		SLOT(swapParams()));
+
+
 	// Menu actions
 	QObject::connect(m_ui.helpAboutAction,
 		SIGNAL(triggered(bool)),
@@ -503,6 +514,8 @@ void drumkv1widget::paramChanged ( float fValue )
 // Reset all param knobs to default values.
 void drumkv1widget::resetParams (void)
 {
+	resetSwapParams();
+
 	for (uint32_t i = 0; i < drumkv1::NUM_PARAMS; ++i) {
 		drumkv1::ParamIndex index = drumkv1::ParamIndex(i);
 		float fValue = drumkv1_default_params[i].value;
@@ -511,18 +524,41 @@ void drumkv1widget::resetParams (void)
 			fValue = pKnob->defaultValue();
 		setParamValue(index, fValue);
 		updateParam(index, fValue);
+		m_params_ab[index] = fValue;
 	}
 }
 
 
+// Swap params A/B.
+void drumkv1widget::swapParams (void)
+{
+	resetParamKnobs(drumkv1::NUM_PARAMS);
+
+	for (uint32_t i = 0; i < drumkv1::NUM_PARAMS; ++i) {
+		drumkv1::ParamIndex index = drumkv1::ParamIndex(i);
+		drumkv1widget_knob *pKnob = paramKnob(index);
+		if (pKnob) {
+			const float fOldValue = pKnob->value();
+			const float fNewValue = m_params_ab[index];
+			setParamValue(index, fNewValue);
+			updateParam(index, fNewValue);
+			m_params_ab[index] = fOldValue;
+		}
+	}
+}
+ 
+ 
 // Reset all param default values.
 void drumkv1widget::resetParamValues ( uint32_t nparams )
 {
+	resetSwapParams();
+
 	for (uint32_t i = 0; i < nparams; ++i) {
 		drumkv1::ParamIndex index = drumkv1::ParamIndex(i);
 		float fValue = drumkv1_default_params[i].value;
 		setParamValue(index, fValue);
 		updateParam(index, fValue);
+		m_params_ab[index] = fValue;
 	}
 }
 
@@ -535,6 +571,15 @@ void drumkv1widget::resetParamKnobs ( uint32_t nparams )
 		if (pKnob)
 			pKnob->resetDefaultValue();
 	}
+}
+
+
+// Reset swap params A/B button toggle state.
+void drumkv1widget::resetSwapParams (void)
+{
+	bool bSwapBlock = m_ui.SwapParamsButton->blockSignals(true);
+	m_ui.SwapParamsButton->setChecked(false);
+	m_ui.SwapParamsButton->blockSignals(bSwapBlock);
 }
 
 
@@ -623,6 +668,7 @@ void drumkv1widget::loadPreset ( const QString& sFilename )
 							float fValue = eParam.text().toFloat();
 							setParamValue(index, fValue);
 							updateParam(index, fValue);
+							m_params_ab[index] = fValue;
 						}
 					}
 				}
